@document 组件按需加载

--- a/demos/css/document.css
+++ b/demos/css/document.css
@@ -22,3 +22,17 @@ body {
 		color: blue;
 	}
 }
+@document url(http://www.w3.org/), url-prefix(http://www.w3.org/Style/), domain(mozilla.org), regexp("https:.*") {
+
+	/* 该条CSS规则会应用在下面的网页:
+	   + URL为"http://www.w3.org/"的页面.
+	   + 任何URL以"http://www.w3.org/Style/"开头的网页
+	   + 任何主机名为"mozilla.org"或者主机名以".mozilla.org"结尾的网页     
+	   + 任何URL以"https:"开头的网页 */
+
+	/* make the above-mentioned pages really ugly */
+	body {
+		color: purple;
+		background: yellow;
+	}
+}
