--- a/demos/css/style.css
+++ b/demos/css/style.css
@@ -10,8 +10,12 @@
 }
 
 @keyframes colorcycle {
-	from { background-color: #80A060; }
-	to { background-color:  firebrick; }
+	from {
+		background-color: #80a060;
+	}
+	to {
+		background-color: firebrick;
+	}
 }
 
 /**
@@ -23,22 +27,24 @@ a,
 hgroup > h1 > strong,
 section > h1 {
 	animation-duration: 12s;
-	animation-iteration-count:infinite;
+	animation-iteration-count: infinite;
 }
 
-pre, code, textarea {
+pre,
+code,
+textarea {
 	font-family: Consolas, Monaco, monospace;
 }
 
 hgroup > h1,
 section > h1 {
 	color: firebrick;
-	text-shadow: .05em .05em slategray;	
+	text-shadow: .05em .05em slategray;
 }
 
 .download,
 ul.features > li:before {
-	background-color: #80A060;
+	background-color: #80a060;
 }
 
 ul.drawbacks > li:before {
@@ -56,7 +62,7 @@ ul.drawbacks > li:before {
 html {
 	background-color: slategray;
 	background-image: linear-gradient(90deg, transparent 50%, white 50%),
-		repeating-linear-gradient(60deg, rgba(255,255,255,.15), rgba(255,255,255,.15) 40px, transparent 40px, transparent 80px);
+	repeating-linear-gradient(60deg, rgba(255,255,255,.15), rgba(255,255,255,.15) 40px, transparent 40px, transparent 80px);
 }
 
 .body {
@@ -66,11 +72,11 @@ html {
 	margin: auto;
 	background: url(../img/noise.png) white;
 	background: url(../img/raisedfist.png) bottom right no-repeat,
-		linear-gradient(90deg, rgba(255,255,255,0) 10%, white),
-		url(../img/noise.png) white;
+	linear-gradient(90deg, rgba(255,255,255,0) 10%, white),
+	url(../img/noise.png) white;
 	font: 100%/1.6 Arvo, sans-serif;
 	text-shadow: 0 1px white;
-	hyphens:auto;
+	hyphens: auto;
 	box-shadow: -8px 0 15px -8px rgba(0,0,0,.5);
 }
 
@@ -83,7 +89,10 @@ a:hover {
 	color: firebrick;
 }
 
-header, hgroup, section, footer {
+header,
+hgroup,
+section,
+footer {
 	display: block;
 }
 
@@ -96,53 +105,53 @@ hgroup {
 	text-align: center;
 }
 
-	hgroup > h1:before {
-		content: url(../img/logo.svg);
-		display: block;
-		margin: auto;
-	}
-	
-	hgroup > h1 {
-		font-size: 500%;
-		line-height: 1.1;
-		letter-spacing: -.02em;
-	}
-	
-	hgroup > h2 {
-		margin: -.5em 0 0 3em;
-		font-weight: normal;
-		font-size: 160%;
-		color: slategray;
-	}
-	
+hgroup > h1:before {
+	content: url(../img/logo.svg);
+	display: block;
+	margin: auto;
+}
+
+hgroup > h1 {
+	font-size: 500%;
+	line-height: 1.1;
+	letter-spacing: -.02em;
+}
+
+hgroup > h2 {
+	margin: -.5em 0 0 3em;
+	font-weight: normal;
+	font-size: 160%;
+	color: slategray;
+}
+
 ul {
 	list-style: none;
 	padding-left: 1.9em;
 	margin: 1em 0;
 }
 
-	ul > li:before {
-		content: '✿';
-		background: slategray;
-		float: left;
-		clear:left;
-		padding: .1em .5em;
-		margin-left: -2.3em;
-		color: white;
-		font-size: 80%;
-		text-align: center;
-		border-radius: 50%;
-		text-shadow: 0 -1px rgba(0,0,0,.5);
-		box-shadow: 0 1px white;
-	}
-	
-	ul.features > li:before {
-		content: '✚';
-	}
-	
-	ul.drawbacks > li:before {
-		content: '✖';
-	}
+ul > li:before {
+	content: '✿';
+	background: slategray;
+	float: left;
+	clear: left;
+	padding: .1em .5em;
+	margin-left: -2.3em;
+	color: white;
+	font-size: 80%;
+	text-align: center;
+	border-radius: 50%;
+	text-shadow: 0 -1px rgba(0,0,0,.5);
+	box-shadow: 0 1px white;
+}
+
+ul.features > li:before {
+	content: '✚';
+}
+
+ul.drawbacks > li:before {
+	content: '✖';
+}
 
 nav {
 	position: relative;
@@ -166,33 +175,33 @@ nav:after {
 	height: 1px;
 	border: 12px solid transparent;
 	border-right-color: black;
-}	
+}
 
-	nav > ul {
-		display: inline;
-		padding: 0;
-	}
-	
-		nav > ul > li {
-			display: inline;
-		}
-		
-			nav > ul > li:before {
-				content: none;
-			}
-			
-			nav > ul > li > a {
-				display: inline-block;
-				padding:.2em .6em;
-				color: white;
-				text-decoration: none;
-				text-shadow: .1em .1em black;
-			}
-			
-			nav > ul > li > a:hover {
-				background: firebrick;
-				color: white;
-			}
+nav > ul {
+	display: inline;
+	padding: 0;
+}
+
+nav > ul > li {
+	display: inline;
+}
+
+nav > ul > li:before {
+	content: none;
+}
+
+nav > ul > li > a {
+	display: inline-block;
+	padding: .2em .6em;
+	color: white;
+	text-decoration: none;
+	text-shadow: .1em .1em black;
+}
+
+nav > ul > li > a:hover {
+	background: firebrick;
+	color: white;
+}
 
 /* Pages */
 body.home .page,
@@ -205,25 +214,25 @@ body.in-page > section:not(.current) {
 .section-container {
 	overflow: hidden;
 }
-	
+
 section {
 	margin-bottom: 1em;
 	box-sizing: border-box;
 }
 
-	section > h1 {
-		margin-top: .5em;
-		font-size: 250%;
-		line-height: 1;
-	}
-		
-		section > section > h1 {
-			margin-top: 1.5em;
-			color: #80A060;
-			font-size: 150%;
-			text-shadow: .05em .05em firebrick;
-			animation: none;
-		}
+section > h1 {
+	margin-top: .5em;
+	font-size: 250%;
+	line-height: 1;
+}
+
+section > section > h1 {
+	margin-top: 1.5em;
+	color: #80a060;
+	font-size: 150%;
+	text-shadow: .05em .05em firebrick;
+	animation: none;
+}
 
 #wtf {
 	font-size: 160%;
@@ -231,8 +240,9 @@ section {
 }
 
 .github-ribbon img {
-	position: fixed; 
-	top: 0; right: 0; 
+	position: fixed;
+	top: 0;
+	right: 0;
 	z-index: 2;
 	border: 0;
 }
@@ -269,32 +279,32 @@ section#test-drive {
 	overflow: hidden;
 }
 
-	section#test-drive > textarea {
-		width: 49.5%;
-		height: 30em;
-		float: left;
-		box-sizing: border-box;
-		border: 1px solid slategray;
-		font-size: 80%;
-		background: rgba(255,255,255,.5);
-	}
-	
-	section#test-drive > textarea#prefixed {
-		float: right;
-	}
-	
+section#test-drive > textarea {
+	width: 49.5%;
+	height: 30em;
+	float: left;
+	box-sizing: border-box;
+	border: 1px solid slategray;
+	font-size: 80%;
+	background: rgba(255,255,255,.5);
+}
+
+section#test-drive > textarea#prefixed {
+	float: right;
+}
+
 /* section#faq */
 
-	section#faq > section > h1:before {
-		content: open-quote;
-	}
-	
-	section#faq > section > h1:after {
-		content: close-quote;
-	}
-	
+section#faq > section > h1:before {
+	content: open-quote;
+}
 
-	
+section#faq > section > h1:after {
+	content: close-quote;
+}
+
+
+
 footer {
 	font-size: 130%;
 	text-align: center;
@@ -308,7 +318,6 @@ a.download {
 	height: 7em;
 	padding: 1.2em 0;
 	background-image: linear-gradient(transparent, rgba(0,0,0,.3));
-	
 	color: white;
 	line-height: 1;
 	font-size: 120%;
@@ -316,7 +325,6 @@ a.download {
 	text-align: center;
 	text-decoration: none;
 	text-shadow: .08em .08em .2em rgba(0,0,0,.6);
-	
 	border-radius: 50%;
 	box-shadow: .1em .2em .4em -.2em black;
 	box-sizing: border-box;
@@ -329,29 +337,29 @@ a.download:hover {
 	transition: 1s transform;
 }
 
-	a.download > strong {
-		display: block;
-		margin: .1em 0;
-		font-size: 180%;
-		white-space: nowrap;
-	}
-	
-	a.download:after {
-		content: attr(title) ' →';
-		position: absolute;
-		top: 14em;
-		right: -2em;
-		color: slategray;
-		font-size: 80%;
-		text-shadow: 0 1px white;
-		white-space: nowrap;
-		transform: rotate(255deg);
-	}
-	
-	a.download:hover:after {
-		display: none;
-	}
-	
+a.download > strong {
+	display: block;
+	margin: .1em 0;
+	font-size: 180%;
+	white-space: nowrap;
+}
+
+a.download:after {
+	content: attr(title) ' →';
+	position: absolute;
+	top: 14em;
+	right: -2em;
+	color: slategray;
+	font-size: 80%;
+	text-shadow: 0 1px white;
+	white-space: nowrap;
+	transform: rotate(255deg);
+}
+
+a.download:hover:after {
+	display: none;
+}
+
 .twitter-share-button {
 	position: fixed;
 	top: 10px;
